services are up and running